--- a/html/index.html
+++ b/html/index.html
@@ -113,15 +113,15 @@
 	font-size: 72pt;
 	font-weight: 700;
 	color: rgba(255,255,255,.75);
-   -webkit-text-stroke-width: 1px;
-   -webkit-text-stroke-color: rgba(50,50,50,.75);
+	-webkit-text-stroke-width: 1px;
+	-webkit-text-stroke-color: rgba(50,50,50,.75);
 	opacity: 0.0;
 	transition: opacity 1s;
 	width: 100%; 	
 	text-align: center;
 	position: absolute;
-	top: 50%;
-	transform: translateY(-50%);
+	top: 100%;
+	transform: translateY(-100%);
 }
 
 .text-container {
@@ -230,15 +230,22 @@ function check_top()
 	
 }
 
+function hide_center_text()
+{
+	$(".center-text").css("opacity",0.0) /* hide the scroll message */
+}
+
 function set_style(d)
 {
 	d=d||pod_date
+	console.log("Date: "+d)
+ 
 	var date_string=sprintf("%04d.%02d.%02d",d.getUTCFullYear(),(d.getUTCMonth()+1),d.getUTCDate())
-	console.log(date_string)
-    var xobj = new XMLHttpRequest();
-    xobj.overrideMimeType("application/json");
-    xobj.open('GET', 'backgrounds/'+date_string+'.js', true); 
-    xobj.onreadystatechange = function () {
+	console.log("pod date: "+date_string)
+	var xobj = new XMLHttpRequest();
+	xobj.overrideMimeType("application/json");
+	xobj.open('GET', 'backgrounds/'+date_string+'.js', true); 
+	xobj.onreadystatechange = function () {
 		if (xobj.readyState == 4 && xobj.status == "200") 
 		{
 			image_info=JSON.parse(xobj.responseText)
@@ -246,8 +253,9 @@ function set_style(d)
 			background_image.setAttribute('src','backgrounds/'+date_string+'.jpg')		
 			background_style.setAttribute('href','backgrounds/'+date_string+'.css')		
 			pod_date=d
-			console.log(pod_date)
-            // Required use of an anonymous callback as .open will NOT return a value but simply returns undefined in asynchronous mode
+			console.log("Using style: " + date_string)
+			$(".center-text").css("opacity",0.0) /* hide the scroll message */
+			check_top()
 		}
     };
     xobj.send(null);  
@@ -272,17 +280,82 @@ function update_image_info()
 {
 	var footer=document.getElementsByClassName('author_info')[0]
 	footer.innerHTML=sprintf(image_info_html,image_info)
-	$("#previous_style_btn").click(previous_style)
-	$("#next_style_btn").click(next_style)
+	$("#previous_style_btn").click(swiperight)
+	$("#next_style_btn").click(swipeleft)
 }
+
+/* jquery mobile comes with a lot of extra stuff, so I'll just do the swipe manually  */
+var swipeleft=null
+var swiperight=null
+var swipe_point=null
+function touchstart(e)
+{
+	e=e.changedTouches[0]
+	swipe_point=[e.clientX,e.clientY,new Date().getTime()]
+}
+
+function touchend(e)
+{
+	if(swipe_point!=null)
+	{
+		e=e.changedTouches[0]
+		// console.log(swipe_point)
+		var end_point=[e.clientX,e.clientY,new Date().getTime()]
+		// console.log(end_point)
+		var diff=[Math.abs(end_point[0]-swipe_point[0]),Math.abs(end_point[1]-swipe_point[1]),end_point[2]-swipe_point[2]]
+		// console.log(diff)
+		if( diff[0]>(diff[1]+70) && diff[1]<200 && diff[2]<1000 )
+		{
+			if( end_point[0]-swipe_point[0]>0)
+			{
+				console.log("swipe right")
+				swiperight()
+			}
+			else 
+			{
+				console.log("swipe right")
+				swipeleft()
+			}
+		}
+		swipe_point=null
+	}
+}
+function isTouchable() 
+{
+	try
+	{ 
+		document.createEvent("TouchEvent"); return true; 
+	}
+  	catch(e)
+	{ 
+		return false; 
+	}
+}
+var touchable
 
 function init()
 {
-	set_style()
-	// Watch for scrolling
-	$(window).scroll(check_top)
-	check_top()
+	var computed_style=window.getComputedStyle(document.body)
+	if( computed_style.direction=='rtl' )
+	{
+		swipeleft=previous_style
+		swiperight=next_style
+	}
+	else
+	{
+		swipeleft=next_style
+		swiperight=previous_style
+	}
+
+	touchable=isTouchable()
+	if( touchable )
+	{
+		document.addEventListener("touchstart",touchstart)
+		document.addEventListener("touchend",touchend)
+	}
 	
+	$(window).scroll(check_top)
+	set_style()
 }
 
 </script>
@@ -297,11 +370,11 @@ function init()
 	<li> <a href="/blog">blog</a> </li>
 	<li> <div>projects
 		<ul>
-			<li><a href="/js-turtle/about/">javascript turtle graphics</a></li>
-			<li><a href="/frequency-generator/about/">frequency generator</a></li>
-			<li><a href="/code-breaker/about/">code breaker</a></li>
-			<li><a href="/orbits/about/">orbits</a></li>
-			<li><a href="/l.e.m./about/">lunar excursion module</a></li>
+			<li><a href="/about/js-turtle">javascript turtle graphics</a></li>
+			<li><a href="/about/frequency-generator">frequency generator</a></li>
+			<li><a href="/about/code-breaker">code breaker</a></li>
+			<li><a href="/about/orbits">orbits</a></li>
+			<li><a href="/about/l.e.m.">lunar excursion module</a></li>
 		</ul>
 	</div>
 	</li>
@@ -312,8 +385,8 @@ function init()
 </div>
 
 <div class="center-text-container">
-	<div class="center-text">
-	Scroll Down
+	<div id="center-message" class="center-text">
+	&#x2935;
 	</div>
 </div>
 
@@ -322,7 +395,7 @@ function init()
 	<div class="fade-in"></div>
 	<div class="text-body">
 	<p>
-	The Geodynamics Liberation Front is an outreach organization intended to exposes students and the general public to scientific concepts using the Earth and Earth processes as a pedagogical tool to teach Science, Technology, Art, Engineering and Math (STEAM).
+	The Geodynamics Liberation Front is an outreach organization intended to exposes students and the general public to scientific concepts using the Earth and Earth processes as a pedagogical tool to teach Science, Technology, Engineering, Arts, and Math (STEAM).
 	</p>
 	<p style="text-align: center">
 	MORE COMING SOON
@@ -334,9 +407,9 @@ function init()
 <footer>
 	<div class="info_icon">i</div>
 	<div class="author_info"></div>
-</fotter>
+</footer>
 
-<script src="../script/jquery.js"></script>
+<script src="/script/jquery.js"></script>
 <script>
 $( init )
 </script>
